--- a/css/app.scss
+++ b/css/app.scss
@@ -126,6 +126,31 @@ input:focus{
    font-family: sans-serif;
    font-size: 1.8em;
     border-left: 2px solid orangered;
+
+    button {
+        position: relative;
+        bottom: 11px;
+        display: none;
+        width: 30px;
+        height: 30px;
+        font-size: .3em;
+        text-align: center;
+        color: navajowhite;
+        background-color: #0C2352;
+        border: 2px groove red;
+        outline: none;
+        border-radius: 40px;
+    }
+
+    &:hover {
+        button{
+            display: inline;
+        }
+        button:hover{
+            border: 1px ridge lime;
+        }
+    }
+
  }
 
 }
